frontend/src/Pages/SearchPage.module.scss
.search {
  text-align: right;
  margin-top: 16px;

  @media only screen and (min-width: 1180px) {
    & {
      margin-top: -64px;
    }
  }

  form {
    display: flex;
    margin-bottom: 16px;
  }

  input[type='search'] {
    width: 100%;
    display: block;
    box-sizing: border-box;
    padding: 5px;
    font-size: 24px;
    margin-right: 8px;
  }

  .error {
    color: var(--danger);
    &::before {
      display: inline;
      content: "⚠ ";
    }
  }

  .results {
    text-align: left;
  }

  .stats {
    margin-bottom: 40px;
    color: var(--fgSofter);
  }
}

